--- a/packages/core/styles/layout/_wrapper-padding.scss
+++ b/packages/core/styles/layout/_wrapper-padding.scss
@@ -12,16 +12,11 @@
     padding-left: 1rem !important;
   }
 
-  &.no-borders:not(.component--has-legacy-border):not(.component--has-border-color-theme):not(.component--has-background):not(.component--has-accent) {
-    padding-top: 0 !important;
-    padding-right: 0 !important;
-    padding-bottom: 0 !important;
-    padding-left: 0 !important;
-  }
 }
 
+
 @mixin cove-visualization-body-wrap-inline-padding {
-  padding: 0;
+  padding-inline: 0;
 
   .cove-visualization__body.component--has-legacy-border &,
   .cove-visualization__body.component--has-border-color-theme &,
