--- a/packages/core/styles/main.scss
+++ b/packages/core/styles/main.scss
@@ -20,6 +20,8 @@
 
   .subtext {
     margin-top: 1em;
+    font-size: var(--visualization-meta-font-size);
+    line-height: var(--visualization-body-line-height);
   }
 
   .warning {
